--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "clsx": "^2.1.1",
     "ee-ts": "^1.0.2",
     "lucide-react": "^0.554.0",
-    "next": "16.0.4",
+    "next": "^16.0.10",
     "prisma": "5.19.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
@@ -45,7 +45,7 @@
     "@types/ws": "^8.18.1",
     "concurrently": "^9.2.1",
     "eslint": "^9",
-    "eslint-config-next": "16.0.4",
+    "eslint-config-next": "^16.0.10",
     "tailwindcss": "^4",
     "tsx": "^4.20.6",
     "tw-animate-css": "^1.4.0",
